@startuml

title Manga Creation and Publishing Management System

skinparam classAttributeIconSize 0

class Role {
  +role_id : int
  +role_name : string
  +description : string
  +getRolesWithUserCount() : array
}

class User {
  +user_id : int
  +role_id : int
  +username : string
  +full_name : string
  +email : string
  +password_hash : string
  +status : string
  +is_head_board : int
  +getRoleStatistics() : array
}

class Series {
  +series_id : int
  +mangaka_id : int
  +editor_id : int
  +title : string
  +description : string
  +status : string
  +publish_type : string
  +cover_image : string
  +proposal_file : string
  +dossier_notes : string
  +getSeriesForPublishing() : array
  +getSeriesByEditorId(editor_id: int) : array
  +getDossiersByEditorId(editor_id: int) : array
  +countActiveSeries() : int
}

class Chapter {
  +chapter_id : int
  +series_id : int
  +chapter_number : int
  +title : string
  +status : string
  +due_date : datetime
  +published_at : datetime
  +is_final : tinyint
  +hasFinalChapter(series_id: int) : bool
  +countUnfinishedChapters(series_id: int) : int
  +hasFinalApprovedChapter(series_id: int) : bool
  +countByMangakaId(mangaka_id: int) : int
  +getUpcomingDeadlinesByEditor(editor_id: int) : array
}

class Page {
  +page_id : int
  +chapter_id : int
  +page_number : int
  +image_url : string
  +old_image_url : string
  +status : string
  +findByChapterIdWithAnnotationCount(chapter_id: int) : array
  +countByMangakaId(mangaka_id: int) : int
  +getPageNumbersByChapterId(chapter_id: int) : array
  +getOtherPageNumbers(chapter_id: int, page_id: int) : array
}

class PageRegion {
  +region_id : int
  +page_id : int
  +region_type : string
  +x : int
  +y : int
  +width : int
  +height : int
  +status : string
}

class Task {
  +task_id : int
  +page_id : int
  +page_region_id : int
  +grouped_region_ids : string
  +mangaka_id : int
  +assistant_id : int
  +title : string
  +task_type : string
  +description : string
  +resource_url : string
  +priority : string
  +status : string
  +due_date : datetime
  +getStatusStatistics() : array
  +countByPageAndAssistant(page_id: int, assistant_id: int) : int
  +getMonthlyIncomeStats(assistant_id: int) : array
}

class Submission {
  +submission_id : int
  +user_id : int
  +task_id : int
  +chapter_id : int
  +file_url : string
  +notes : string
  +status : string
  +submitted_at : datetime
  +getStatusStatistics() : array
  +countByMangakaId(mangaka_id: int) : int
  +countPendingByMangakaId(mangaka_id: int) : int
  +countPendingChapterSubmissionsByEditor(editor_id: int) : int
}

class Review {
  +review_id : int
  +submission_id : int
  +reviewer_id : int
  +comments : string
  +rating : int
  +created_at : datetime
  +countReviewsByEditor(editor_id: int, status: string) : int
}

class SeriesRanking {
  +ranking_id : int
  +series_id : int
  +board_member_id : int
  +rank_position : int
  +score : decimal
  +votes : int
  +period_start_date : date
}

class Notification {
  +notification_id : int
  +user_id : int
  +related_id : int
  +type : string
  +message : string
  +is_read : boolean
}

class SystemLog {
  +log_id : int
  +user_id : int
  +action : string
  +details : string
  +ip_address : string
}

class EditorAnnotation {
  +annotation_id : int
  +page_id : int
  +editor_id : int
  +x : int
  +y : int
  +width : int
  +height : int
  +comments : string
  +created_at : datetime
  +deleteByPageId(page_id: int) : bool
}

class BoardVote {
  +vote_id : int
  +series_id : int
  +board_member_id : int
  +vote : string
  +created_at : datetime
}

Role "1" -- "*" User : assigned

User "1" -- "*" Series : creates
User "1" -- "*" Series : manages

Series "1" -- "*" Chapter : contains

Chapter "1" -- "*" Page : contains

Page "1" -- "*" PageRegion : segment
Page "1" -- "*" Task : requires
Page "1" -- "*" EditorAnnotation : has
PageRegion "1" -- "*" Task : targetedAt

User "1" -- "*" Task : manager_assigns
User "1" -- "*" Task : assistant_receives

Task "1" -- "*" Submission : generates

Chapter "1" -- "*" Submission : submitted

User "1" -- "*" Submission : submits

Submission "1" -- "*" Review : receives

User "1" -- "*" Review : writes
User "1" -- "*" EditorAnnotation : annotates
User "1" -- "*" BoardVote : votes

Series "1" -- "*" SeriesRanking : ranked
Series "1" -- "*" BoardVote : receives_votes

User "1" -- "*" SeriesRanking : evaluates

User "1" -- "*" Notification : receives
User "1" -- "*" SystemLog : triggers

@enduml
